package grymV2.game;

public enum ScreenStates {
    MENU,
    GAME,
    PAUSE,
    END
}
